[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-world"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
divan = { workspace = true }

[dependencies]
bitvec = { workspace = true }
froglight-common = { workspace = true }
glam = { workspace = true }
smallvec = { features = ["const_generics", "const_new", "union"], workspace = true }

# Optional dependencies
arc-swap = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["glam", "hashbrown", "smallvec"], workspace = true, optional = true }
froglight-biome = { workspace = true, optional = true }
froglight-block = { workspace = true, optional = true }
hashbrown = { features = ["alloc", "core", "default-hasher"], workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }
serde = { features = ["derive"], workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# --- Tests/Benchmarks ---

[[bench]]
name = "contains"
required-features = ["std"]
harness = false

# --- Features ---

[features]
default = ["alloc", "std"]

# Enable `bevy` support.
bevy = ["alloc", "dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "dep:hashbrown", "froglight-common/bevy", "serde"]
# Enable `froglight-biome` support.
froglight-biome = ["dep:froglight-biome"]
# Enable `froglight-block` support.
froglight-block = ["dep:froglight-block"]
# Enable `serde` support.
serde = ["dep:serde", "smallvec/serde"]
# Enable `tracing` support.
tracing = ["dep:tracing", "froglight-biome?/tracing", "froglight-block?/tracing", "froglight-common/tracing"]

# Add async locking support
async = ["dep:async-lock", "froglight-biome?/async", "froglight-block?/async"]
# Enable `libm` for `no_std` support.
libm = ["glam/nostd-libm"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["dep:parking_lot", "froglight-biome?/parking_lot", "froglight-block?/parking_lot"]

# Enable support for a global allocator
alloc = ["bitvec/alloc", "dep:arc-swap", "froglight-biome?/alloc", "froglight-block?/alloc", "froglight-common/alloc"]
# Enable support for the standard library
std = ["alloc", "async-lock?/std", "bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "bitvec/std", "froglight-biome?/std", "froglight-block?/std", "froglight-common/std", "glam/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-biome?/nightly", "froglight-block?/nightly", "froglight-common/nightly", "hashbrown?/nightly", "parking_lot?/nightly", "smallvec/specialization"]
