[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight-world"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dev-dependencies]
divan = { workspace = true }
froglight-biome = { features = ["biome_data"], workspace = true }

[dependencies]
bitvec = { features = ["alloc"], workspace = true }
froglight-common = { workspace = true }
glam = { workspace = true }
smallvec = { features = ["const_generics", "const_new", "union"], workspace = true }

# Optional dependencies
bevy_app = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_ecs = { features = ["bevy_reflect"], workspace = true, optional = true }
bevy_reflect = { features = ["glam", "hashbrown", "smallvec"], workspace = true, optional = true }
facet = { features = ["reflect", "smallvec"], workspace = true, optional = true }
froglight-biome = { workspace = true, optional = true }
froglight-block = { workspace = true, optional = true }
froglight-facet = { workspace = true, optional = true }
froglight-registry-template = { workspace = true, optional = true }
serde = { features = ["alloc", "derive"], workspace = true, optional = true }

# --- Tests/Benchmarks ---

[[bench]]
name = "contains"
required-features = ["std"]
harness = false

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["dep:bevy_app", "dep:bevy_ecs", "dep:bevy_reflect", "froglight-common/bevy", "serde"]
# Enable `facet` support.
facet = ["dep:facet", "dep:froglight-facet", "froglight-common/facet"]
# Enable `froglight-biome` support.
froglight-biome = ["dep:froglight-biome", "dep:froglight-registry-template"]
# Enable `froglight-block` support.
froglight-block = ["dep:froglight-block", "dep:froglight-registry-template"]
# Enable `serde` support.
serde = ["dep:serde", "smallvec/serde"]

# Enable `libm` for `no_std` support.
libm = ["glam/nostd-libm", "froglight-block?/libm"]
# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-registry-template?/once_cell"]

# Enable support for the standard library
std = ["bevy_app?/std", "bevy_ecs?/std", "bevy_reflect?/std", "bitvec/std", "froglight-biome?/std", "froglight-block?/std", "froglight-common/std", "froglight-registry-template?/std", "glam/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-biome?/nightly", "froglight-block?/nightly", "froglight-common/nightly", "froglight-facet?/nightly", "froglight-registry-template?/nightly", "smallvec/specialization", "std"]
