[package]
edition = { workspace = true }
homepage = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "froglight"
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

# --- Dependencies ---

[dependencies]
froglight-internal = { workspace = true }

# --- Features ---

[features]
default = ["std"]

# Enable `bevy` support.
bevy = ["froglight-internal/bevy"]
# Enable `tracing` support.
tracing = ["froglight-internal/tracing"]

# Enable `libm` for `no_std` support.
libm = ["froglight-internal/libm"]
# Enable `parking_lot` for `no_std` support.
parking_lot = ["froglight-internal/parking_lot"]
# Enable `once_cell` for `no_std` support.
once_cell = ["froglight-internal/once_cell"]

# Enable support for the standard library
std = ["froglight-internal/std"]
# Enable optimizations using the nightly toolchain
nightly = ["froglight-internal/nightly", "std"]
