[package]
name = "froglight-app"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
bevy = { workspace = true }
froglight-core = { version = "0.1.0", path = "../froglight-core" }
froglight-network = { version = "0.1.0", path = "../froglight-network" }
