[package]
name = "froglight-app"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
bevy_mod_debugdump = "0.10.0"

[dependencies]
bevy = { workspace = true }
froglight-assets = { version = "0.1.0", path = "../froglight-assets" }
froglight-client = { version = "0.1.0", path = "../froglight-client" }
froglight-core = { version = "0.1.0", path = "../froglight-core" }
froglight-entity = { version = "0.1.0", path = "../froglight-entity" }
froglight-interface = { version = "0.1.0", path = "../froglight-interface" }
froglight-network = { version = "0.1.0", path = "../froglight-network" }
froglight-protocol = { version = "0.1.0", path = "../froglight-protocol" }
froglight-registry = { version = "0.1.0", path = "../froglight-registry" }
froglight-render = { version = "0.1.0", path = "../froglight-render" }
froglight-settings = { version = "0.1.0", path = "../froglight-settings" }
froglight-utils = { version = "0.1.0", path = "../froglight-utils" }
froglight-world = { version = "0.1.0", path = "../froglight-world" }

[features]
default = ["bevy_asset"]

bevy_asset = ["bevy/bevy_asset"]

[[example]]
name = "system-graph"
path = "examples/system-graph/main.rs"
