[package]
name = "froglight-app"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dev-dependencies]
bevy_mod_debugdump = "0.10.0"

[dependencies]
bevy = { workspace = true, default-features = false }
froglight-assets = { version = "0.1.0", path = "../froglight-assets", optional = true }
froglight-client = { version = "0.1.0", path = "../froglight-client", optional = true }
froglight-entity = { version = "0.1.0", path = "../froglight-entity" }
froglight-events = { version = "0.1.0", path = "../froglight-events" }
froglight-network = { version = "0.1.0", path = "../froglight-network" }
froglight-protocol = { version = "0.1.0", path = "../froglight-protocol" }
froglight-registry = { version = "0.1.0", path = "../froglight-registry" }
froglight-render = { version = "0.1.0", path = "../froglight-render", optional = true }
froglight-settings = { version = "0.1.0", path = "../froglight-settings", default-features = false }
froglight-utils = { version = "0.1.0", path = "../froglight-utils" }
froglight-world = { version = "0.1.0", path = "../froglight-world" }

[features]
default = ["bevy_asset"]

# Enables creates which load assets
bevy_asset = [
    "bevy/bevy_asset",
    "dep:froglight-assets",
    "dep:froglight-client",
    "dep:froglight-render",
    "froglight-settings/bevy_asset",
]

[[example]]
name = "system-graph"
path = "examples/system-graph/main.rs"
