[package]
name = "froglight-assets"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
async_zip = { version = "0.0.17", features = ["deflate"] }
bevy_app = { workspace = true }
bevy_asset = { workspace = true }
bevy_audio = { workspace = true }
bevy_derive = { workspace = true }
bevy_ecs = { workspace = true }
bevy_log = { workspace = true }
bevy_reflect = { workspace = true }
bevy_render = { workspace = true }
bevy_tasks = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
froglight-core = { version = "0.1.0", path = "../froglight-core" }
froglight-protocol = { version = "0.1.0", path = "../froglight-protocol" }
froglight-registry = { version = "0.1.0", path = "../froglight-registry" }
froglight-settings = { version = "0.1.0", path = "../froglight-settings" }
futures-lite = { workspace = true }
hashbrown = { workspace = true }
image = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
